--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,8 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0"
-tokio = {version = "1.38", features = ["rt-multi-thread", "macros"]}
+env_logger = "0.11"
+csv = "1.3"
+reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
+tokio = { version = "1.0", features = ["full"] }
+scraper = "0.19"
