--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0"
 csv = "1.3"
+geo = "0.28"
+geojson = "0.24"
 reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
 scraper = "0.19"
 tokio = { version = "1.0", features = ["full"] }
