--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,7 @@ csv = "1.3"
 geo = "0.28"
 geojson = "0.24"
 reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 scraper = "0.19"
 tokio = { version = "1.0", features = ["full"] }
