--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix-web = "4.6"
+actix-service = "2.0"
+askama = "0.12"
 anyhow = "1.0"
 csv = "1.3"
 geo = "0.28"
