Implement javascript to load OSM map

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 actix-web = "4.6"
 actix-service = "2.0"
+actix-files = "0.6"
 askama = "0.12"
 anyhow = "1.0"
 csv = "1.3"
