--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ actix-files = "0.6"
 askama = "0.12"
 anyhow = "1.0"
 csv = "1.3"
-geo = "0.28"
+geo = { version = "0.28", features = ["use-proj"] }
 geojson = "0.24"
 reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
 serde = { version = "1.0", features = ["derive"] }
