--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,4 +22,5 @@ reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 scraper = "0.19"
+toml ="0.8"
 tokio = { version = "1.0", features = ["full"] }
